new report draft and images

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{inoue2018comparative,
+  title={Comparative Analysis of Biopsy Upgrading in Four Prostate Cancer Active Surveillance Cohorts},
+  author={Inoue, Lurdes YT and Lin, Daniel W and Newcomb, Lisa F and Leonardson, Amy S and Ankerst, Donna and Gulati, Roman and Carter, H Ballentine and Trock, Bruce J and Carroll, Peter R and Cooperberg, Matthew R and others},
+  journal={Annals of internal medicine},
+  volume={168},
+  number={1},
+  pages={1--9},
+  year={2018},
+  publisher={Am Coll Physicians}
+}
+
 @book{de1978practical,
   title={A practical guide to splines},
   author={De Boor, Carl and De Boor, Carl and Math{\'e}maticien, Etats-Unis and De Boor, Carl and De Boor, Carl},
