--- a/report/decision_analytic/mdm/latex/mainmatter/results.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/results.tex
@@ -4,7 +4,7 @@
 \label{sec:results}
 We first discuss the results pertaining to the joint model fitted to the PRIAS dataset and then discuss results from the simulation study.
 \subsection{Model Fit}
-From the joint model fitted to the PRIAS dataset, we found that both $\log_2 \{\mbox{PSA} + 1\}$ velocity,  and log odds of having $\mbox{DRE} > \mbox{T1c}$  were significantly associated with the hazard of cancer progression. For any patient, an increase in $\log_2 \{\mbox{PSA} + 1\}$ velocity from −0.03 to 0.16 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.92 fold increase in the hazard of cancer progression. Whereas, an increase in log odds of $\mbox{DRE} > \mbox{T1c}$ from -6.65 to -4.36 (first and third quartiles of the fitted log odds, respectively) corresponds to a 1.40 fold increase in the hazard of cancer progression. In terms of the predictive performance, we found that the area under the receiver operating characteristic curves (AUC) \cite{landmarking2017} was 0.59, 0.66, and 0.66 at years 1, 2, and 3 of follow‐up, respectively. The AUC estimates for a joint model ignoring DRE measurements were 0.58, 0.64 and 0.60 at years 1, 2 and 3 of follow-up. Parameter estimates are presented in detail in Appendix B of the supplementary material.
+From the joint model fitted to the PRIAS dataset, we found that both $\log_2 \{\mbox{PSA} + 1\}$ velocity,  and log odds of having $\mbox{DRE} > \mbox{T1c}$  were significantly associated with the hazard of cancer progression. For any patient, an increase in $\log_2 \{\mbox{PSA} + 1\}$ velocity from −0.03 to 0.16 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.92 fold increase in the hazard of cancer progression. Whereas, an increase in log odds of $\mbox{DRE} > \mbox{T1c}$ from -6.65 to -4.36 (first and third quartiles of the fitted log odds, respectively) corresponds to a 1.40 fold increase in the hazard of cancer progression. In terms of the predictive performance, we found that the area under the receiver operating characteristic curves (AUC) \cite{landmarking2017} was 0.65, 0.62, 0.75, 0.71 and 0.59 at years one, two, three, four, and five of follow‐up, respectively. Parameter estimates are presented in detail in Appendix B of the supplementary material.
 
 \subsection{Simulation Study}
 Figure \ref{fig:mean_nb_offset} shows the mean (obtained from 500 x 250 test patients) number of biopsies conducted by various biopsy schedules, plotted against the corresponding delay in detection of cancer progression in years (time of last biopsy - true time of cancer progression). The general trend is that more biopsies are required to have a smaller delay in detection.
