--- a/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
@@ -3,11 +3,11 @@
 \begin{abstract}
 \textbf{Background.} Low-risk prostate cancer patients enrolled in active surveillance (AS) programs commonly undergo biopsies for examination of cancer progression. Biopsies are conducted as per a fixed and frequent schedule (e.g. annual biopsies), common for all patients. Such schedules may schedule unnecessary biopsies. Since biopsies are burdensome, patients do not always comply with the schedule, which increases the risk of delayed detection of cancer progression.
 
-\textbf{Objective.} Motivated by the world's largest AS study, Prostate Cancer Research International Active Surveillance (PRIAS), our aim is to better balance the number of biopsies and the delay in detection of cancer progression. We intend to achieve this by personalizing the decision of conducting biopsies.
+\textbf{Objective.} Motivated by the world's largest AS study, Prostate Cancer Research International Active Surveillance (PRIAS), our aim is to better balance the number of biopsies (burden) and the delay in detection of cancer progression (benefit). We intend to achieve this by personalizing the decision of conducting biopsies.
 
-\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we jointly model the historical prostate-specific antigen levels, digital rectal examination scores, and the latest biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific posterior predictive distribution of the time of cancer progression. Using this distribution we personalize the decision of conducting biopsy at a visit. We compare the personalized approach with the fixed biopsy schedules via an extensive and realistic simulation study based on an exact replica of the population of the patients from the PRIAS study.
+\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we jointly model the observed prostate-specific antigen levels, digital rectal examination scores, and the latest biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific, cancer progression risk profile. Using this personalized risk profile, we make the decision of conducting biopsy at a visit. We compare this personalized approach with the in-practice fixed biopsy schedules via an extensive and realistic simulation study, based on a replica of the patients from the PRIAS study.
 
-\textbf{Results.} In comparison to the fixed schedules, the personalized approach saves one to seven biopsies per patient, depending upon the cancer progression speed of the patient. Despite a reduction in the number of biopsies, the delay in the detection of cancer progression for the personalized approach remains comparable with that of the biopsy schedule of the PRIAS study. 
+\textbf{Results.} In comparison to the fixed schedules, the personalized approach saves one to seven biopsies per patient, depending upon the cancer progression speed of the patient. Despite this reduction in the number of biopsies, the delay in the detection of cancer progression for the personalized approach remains comparable with that of the biopsy schedule of the PRIAS study.
 
 \textbf{Conclusions.} We conclude that the personalized schedules better balance the number of biopsies per detected cancer progression.
 \end{abstract}
