--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -2,6 +2,10 @@
 
 \section{Discussion}
 \label{sec:discussion}
+BASED ON A SINGLE AS PROGRAM. We NEED MORE because of classification accuracy 
+
+AND RIsk automatic did not work best for delay, but more AS programs are needed to evluate it best.
+
 Prostate cancer active surveillance (AS) programs schedule biopsies for patients to detect cancer progression. Biopsies are burdensome and hence each biopsy counts. However, currently there is no consensus on the best time interval for subsequent repeat biopsies \cite{loeb2014heterogeneity}. In order to reduce the delay in detection of cancer progression many AS programs schedule biopsies annually which leads to many unnecessary biopsies for slowly progressing patients. The world's largest AS program PRIAS attempts to identify these patients using their prostate-specific antigen (PSA) profile. However, despite their methodology, compliance for biopsies is low \citep{bokhorst2015compliance}. With an aim to better balance the burden of biopsies on patients and the delay in detection of cancer patients, in this article, we presented a methodology for personalizing the biopsy decision making process in AS programs.
 
 Our methodology utilizes joint models for time-to-event and longitudinal data. Existing approaches for scheduling biopsies either discard information from PSA and digital rectal examination (DRE), or use crude measures such as PSA doubling time. In contrast, our proposed methodology makes a separate decision of biopsy for each patient at each follow-up visit on the basis of finer measures such as patient specific underlying instantaneous PSA value, PSA velocity, probability of having DRE larger than level T1c, and time of the latest biopsy. Our method combines the aforementioned measures into a patient and visit specific cancer progression risk function. It schedules a biopsy if the risk of cancer progression crosses a certain threshold. We compared our approach with the existing annual and PRIAS schedules, by conducting a realistic and extensive simulation study, for a 10 year follow-up period.
