--- a/report/decision_analytic/mdm/latex/supplementary/jm_param_estimation.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/jm_param_estimation.tex
@@ -1,6 +1,18 @@
 % !TEX root =  ../supplementary.tex
 \section{A Bivariate Joint Model for the Longitudinal PSA, and DRE Measurements, and Time to Cancer Progression}
 \label{sec:jm_framework}
+
+PUT KAPLAN MEIER
+Make it simpler.. add this equation somewhere and explain the random part
+\begin{equation*}
+\label{eq:post_pred_dist}
+\begin{aligned}
+g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{dj}(s), \mathcal{Y}_{pj}(s), \mathcal{D}_n\big\}\\
+&= \int \int p\big(T^*_j \mid T^*_j > t, \boldsymbol{b}_j, \boldsymbol{\theta}\big)\\
+&\times p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{dj}(s), \mathcal{Y}_{pj}(s), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{D}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
+\end{aligned}
+\end{equation*}
+
 In this appendix section, we first provide a short introduction to the world's largest active surveillance (AS) program called Prostate Cancer Research International Active Surveillance, abbreviated as PRIAS \citep{bul2013active}, that we use to develop our methodology. We then present an introduction to the joint models for time-to-event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint}, that we fit to the PRIAS dataset.  Lastly, we present the parameter estimation for our model using the Bayesian approach. 
 
 \subsection{PRIAS Dataset}
