--- a/report/decision_analytic/mdm/latex/mainmatter/introduction.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/introduction.tex
@@ -11,7 +11,7 @@ Currently there is no consensus on the frequency of biopsies in AS \cite{loeb201
 \begin{figure}[!htb]
 \captionsetup{justification=justified}
 \centerline{\includegraphics[width=\columnwidth]{images/better_balance_intro.eps}}
-\caption{Median number of biopsies scheduled by various fixed scheduling approaches (in red) in practice (over a follow-up of 10 years), and the corresponding median delay in detection of cancer progression. An ideal schedule (in blue) will schedule only 1 biopsy, exactly at the true time of cancer progression. We intend to better balance the number of biopsies and the delay, than in practice currently, using personalized decision making for biopsies.}
+\caption{Median number of biopsies scheduled by various fixed scheduling approaches (in red) in practice, over a follow-up of 10 years, and the corresponding median delay in detection of cancer progression. An ideal schedule (in blue) will schedule only 1 biopsy, exactly at the true time of cancer progression. We intend to better balance the number of biopsies and the delay, than in practice currently, using personalized decision making for biopsies.}
 \label{fig:better_balance_intro}
 \end{figure}
 
