--- a/report/decision_analytic/mdm/latex/mainmatter/methods.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/methods.tex
@@ -15,7 +15,7 @@ Let $T_i^*$ denote the true cancer progression time of the $i$-th patient in PRI
 \label{fig:jmExplanationPlot_1757}
 \end{figure}
 
-In our joint model, the patient-specific PSA and DRE measurements over time are modeled using a multivariate generalized linear mixed effects sub-model. The sub-model for DRE is given by (see Panel~A, Figure~\ref{fig:jmExplanationPlot_1757}):
+In our joint model, the patient-specific PSA and DRE measurements over time are modeled using a bivariate generalized linear mixed effects sub-model. The sub-model for DRE is given by (see Panel~A, Figure~\ref{fig:jmExplanationPlot_1757}):
 \begin{equation}
 \label{eq:long_model_dre}
 \begin{split}
@@ -51,10 +51,10 @@ where, $\gamma_1, \gamma_2$ are the coefficients for the effect of age. The para
 \subsection{Personalized Decisions for Biopsy During Follow-up Visit}
 \label{subsec:pers_decision_making}
 Let us assume that a decision of conducting a biopsy is to be made for a new patient $j$ shown in Figure~\ref{fig:obsDataPlot_2340}, at his current follow-up visit time $s$. Let $t\leq s$ be the time of his latest biopsy. Let $\mathcal{Y}_{dj}(s)$ and $\mathcal{Y}_{pj}(s)$ denote his observed DRE and PSA measurements taken up to the current visit $s$, respectively. From the observed measurements we want to extract the underlying measurement error free trend of $\log_2 (\mbox{PSA} + 1)$ values and velocity, and the log odds of obtaining $\mbox{DRE} > \mbox{T1c}$. We intend to combine them to inform us when the cancer progression is to be expected (see Figure~\ref{fig:dynRiskPlot_2340}), and to further guide the decision making on whether to conduct a biopsy at the current follow-up visit. The combined information is given by the posterior predictive distribution $g(T^*_j)$ of his time of cancer progression $T^*_j$. It is given by:
-\begin{equation*}
+\begin{equation}
 \label{eq:post_pred_dist}
 g(T^*_j) = p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{dj}(s), \mathcal{Y}_{pj}(s), \mathcal{D}_n\big\}.
-\end{equation*}
+\end{equation}
 The distribution $g(T^*_j)$ is not only patient-specific, but also updates as extra information is recorded at future follow-up visits (see Appendix ??? for details).
 
 \begin{figure}[!htb]
@@ -69,11 +69,11 @@ A key ingredient in the decision of conducting a biopsy at the current follow-up
 \label{eq:dynamic_risk_prob}
 R_j(s \mid t) = \mbox{Pr}\big\{T^*_j \leq s \mid T^*_j > t, \mathcal{Y}_{dj}(s), \mathcal{Y}_{pj}(s), \mathcal{D}_n\big\}, \quad s \geq t.
 \end{equation*}
-A simple and straightforward approach to decide upon conducting a biopsy at the current follow-up visit would be to do so if the risk of cancer progression at the visit is higher than a certain threshold $0 \leq \kappa \leq 1$. For example, as shown in Panel~B of Figure~\ref{fig:dynRiskPlot_2340}, biopsy at a visit may be scheduled if the risk is higher than 15\% (example risk threshold). This process is iterated over the follow-up period until a positive biopsy, while incorporating on each subsequent visit, the time of the latest negative biopsy, and updates in PSA and DRE profiles. This leads to a separate schedule of biopsies for each patient.
+A simple and straightforward approach to decide upon conducting a biopsy at the current follow-up visit would be to do so if the risk of cancer progression at the visit is higher than a certain threshold $0 \leq \kappa \leq 1$. For example, as shown in Panel~B of Figure~\ref{fig:dynRiskPlot_2340}, biopsy at a visit may be scheduled if the risk is higher than 15\% (example risk threshold). This process is iterated over the follow-up period until a positive biopsy, while incorporating on each subsequent visit, the time of the latest negative biopsy, and updates in PSA and DRE profiles. This leads to an entire separate schedule of biopsies for each patient.
 
-Ideally, thresholds should be chosen on the basis of their decision theoretic utility for patients. That is, an ideal threshold (see Figure~\ref{fig:better_balance_intro}) will minimize a bivariate function of the number of biopsies and the delay in detection of progression. However, this requires expressing number of biopsies (count) in units of time (delay), which is not easy. Alternatively, a threshold which minimizes expected delay is given by, ${\kappa=R_j\{E_g(T^*_j) \mid t\}}$, where $E_g(T^*_j)$ is expected progression time. Since, cancer progression is a slowly progressing disease, most AS patients do not progress over a long follow-up period of 10 years. Consequently, it is impossible to compute $E_g(T^*_j)$ for patients without incorrectly extrapolating PSA, DRE profiles, and hazard of cancer progression, over follow-up periods with no data.
+Ideally, thresholds should be chosen on the basis of their decision theoretic utility for patients. That is, an ideal threshold (see Figure~\ref{fig:better_balance_intro}) will minimize a bivariate function of the number of biopsies and the delay in detection of progression. However, due to the lack of usage of risk based biopsy scheduling, it is not possible to obtain this function from the PRIAS data. Alternatively, a threshold which minimizes only the expected delay is given by, ${\kappa=R_j\{E_g(T^*_j) \mid t\}}$, where $E_g(T^*_j)$ is expected progression time based on (\ref{eq:post_pred_dist}). Since, cancer progression is a slowly progressing disease, the personalized distribution of time of cancer progression $g(T^*_j)$ is only known up to year 10 (maximum follow-up period in PRIAS). Consequently, it is infeasible to compute $E_g(T^*_j)$ without incorrectly extrapolating patient risk profiles beyond year 10.
 
-In this regard, an elementary approach is, using risk thresholds utilized in standard clinical settings, e.g., 5\% or 10\% risk, at all follow-up visits. However, a threshold's accuracy of classification between progressions and non-progressions may vary over time. This motivates an  alternative approach, where at each follow-up visit, the threshold which gives the better classification accuracy is chosen. More specifically, given the time $t$ of the latest biopsy of a patient, we are interested in a threshold $\kappa$ with which we can detect maximum number of cancer progressions (high true positive rate, or TPR). However, this may lead to unnecessary biopsy suggestions for many patients (high false positive rate). This issue can be mitigated by maximizing for the positive predictive value, or PPV (also known as precision) simultaneously. To this end, we utilize the $\mbox{F}_1$ score, which is a composite of TPR and PPV (estimated as in Rizopoulos~et~al. \cite{landmarking2017}), and is defined as:
+In this regard, an elementary approach is, using risk thresholds utilized in standard clinical settings, e.g., 5\% or 10\% risk, at all follow-up visits. However, the accuracy of a threshold for classification between progressions and non-progressions varies over the follow-up period. This motivates an alternative approach, where at each follow-up visit, the threshold which gives a better classification accuracy is chosen. More specifically, given the time period $(t, s]$ in which the patient was not biopsied, we are interested in a threshold $\kappa$, which gives the highest progression detection rate (true positive rate, or TPR) for that period. However, this may lead to many unnecessary biopsy suggestions for patients (high false positive rate, or FPR). Subsequently, balancing for the FPR, may further lead to a low number of correct detections (high false negative rate). These issues can be mitigated by maximizing the TPR and positive predictive value (PPV), simultaneously. To this end, we utilize the $\mbox{F}_1$ score, which is a composite of TPR and PPV (estimated as in Rizopoulos~et~al. \cite{landmarking2017}), and is defined as:
 \begin{equation}
 \label{eq:F1_TPR_PPV}
 \begin{split}
@@ -82,11 +82,11 @@ In this regard, an elementary approach is, using risk thresholds utilized in sta
 \mbox{PPV}(t,  s, \kappa) &= \mbox{Pr}\big\{t < T^*_j \leq s \mid R_j(s \mid t) > \kappa \big\}.
 \end{split}
 \end{equation}
-The $\mbox{F}_1$ score ranges between 0 and 1, where a value of 1 signifies perfect TPR and PPV. Since a high $\mbox{F}_1$ score is desired, threshold ${\kappa=\argmax_{\kappa} \mbox{F}_1(t, s, \kappa)}$. It is important to note that $\mbox{F}_1$ score is not the utility of the threshold for the patients. The utility of both fixed thresholds, and threshold based on $\mbox{F}_1$ score is discussed in \hyperref[sec:results]{Results}. 
+The $\mbox{F}_1$ score ranges between 0 and 1, where a value of 1 signifies perfect TPR and PPV. Since a high $\mbox{F}_1$ score is desired, the threshold ${\kappa=\argmax_{\kappa} \mbox{F}_1(t, s, \kappa)}$. It is important to note that the suggested $\mbox{F}_1$ score is not the utility of the threshold for the patients. The utility on which we evaluate both fixed and $\mbox{F}_1$ score based thresholds, is still the number of biopsies and delay (see \hyperref[sec:results]{Results}). 
 
 \subsection{Simulation Study}
-Although the personalized decision making approach is motivated by the PRIAS study, it is not possible to evaluate it on the PRIAS dataset. This is due to the fact that the patients in PRIAS have already had their biopsies as per the PRIAS protocol. In addition, the true time of cancer progression is interval or right censored for all patients, making it impossible to correctly estimate the delay in detection of cancer progression due to a particular schedule. To this end, we conduct an extensive simulation study to find the utility of personalized, PRIAS and annual schedules. For a realistic comparison, we simulate data from the joint model fitted to the PRIAS dataset. The simulated population has the same follow-up period of 10 years as the PRIAS study. In addition the recovered relations between PSA and DRE measurements, and the risk of cancer progression, are retained in the simulated population.
+Although the personalized decision making approach is motivated by the PRIAS study, it is not possible to evaluate it on the PRIAS dataset. This is due to the fact that the patients in PRIAS have already had their biopsies as per the PRIAS protocol. In addition, the true time of cancer progression is interval or right censored for all patients, making it impossible to correctly estimate the delay in detection of cancer progression due to a particular schedule. To this end, we conduct an extensive simulation study to find the utility of personalized, PRIAS, and annual schedules. For a realistic comparison, we simulate data from the joint model fitted to the PRIAS dataset. The simulated population has the same follow-up period of 10 years as the PRIAS study. In addition the recovered relations between PSA and DRE measurements, and the risk of cancer progression, are retained in the simulated population.
 
-From this population, we first sample 500 datasets, each representing a hypothetical AS program, with 1000 patients each. We generate a true cancer progression time for each of the patients, and then sample a set of PSA and DRE measurements at the same time points as given in PRIAS protocol. We then split each dataset into a training (750 patients) and a test (250 patients) part, and generate a random and non‐informative censoring time for the training patients. We next fit a joint model of the specification given in Equation (\ref{eq:long_model_dre}), (\ref{eq:long_model_psa}) and (\ref{eq:rel_risk_model}) to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. Using these fitted joint models, we obtain the cancer progression risk profiles for each of the 500$\times$250 test patients at each of their visits. For each patient at each follow-up visit we make the decision of (not) conducting a biopsy. 
+From this population, we first sample 500 datasets, each representing a hypothetical AS program, with 1000 patients each. We generate a true cancer progression time for each of the patients, and then sample a set of PSA and DRE measurements at the same time points as given in PRIAS protocol. We then split each dataset into a training (750 patients) and a test (250 patients) part, and generate a random and non‐informative censoring time for the training patients. We next fit a joint model of the specification given in Equation (\ref{eq:long_model_dre}), (\ref{eq:long_model_psa}), and (\ref{eq:rel_risk_model}) to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. Using the fitted joint models, we obtain the cancer progression risk profiles for each of the 500$\times$250 test patients at each of their visits. We use the personalized risk profiles to make the decision of biopsy. 
 
-In this simulation study, during follow-up visits we make the decision of biopsies as per the following approaches (abbreviated names in parenthesis): biopsy every year (Annual), biopsy as per the PRIAS protocol (PRIAS), personalized biopsy using: a risk threshold of 5\% (Risk: 5\%), risk threshold of 15\% (Risk: 15\%), and risk threshold chosen automatically by maximizing $\mbox{F}_1$ score (Risk: Automatic). In addition, in each of the aforementioned approaches, one biopsy each is conducted at the time of inclusion in  AS (year 0) and at the end (year 10) of the follow-up period. This results into an entire personalized schedule for each patient. We compare the resulting biopsy schedules on two measures, namely the number of biopsies they schedule and the delay in detection of cancer progression incurred due the schedule. We define the delay as the difference between the time of the biopsy on which cancer progression is detected and the true time of cancer progression. Ideal numbers for these two measures are 1 biopsy and 0 years of delay.
+In this simulation study, we compare the following approaches for biopsies: biopsy annually, biopsy every 1.5 years, biopsy every two years, biopsy every 3 years, biopsies as per the PRIAS protocol, personalized biopsy using three fixed risk thresholds: 5\%, 10\% and 15\%, and a risk threshold chosen using $\mbox{F}_1$ score. We compare the resulting biopsy schedules on the number of biopsies they schedule and the delay in detection of cancer progression incurred due the schedule.
